--- a/authors.html
+++ b/authors.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
 <meta name="description" content=""><meta name="author" content="liudonghua">  <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Cache-Control" content="max-age=604800, must-revalidate" />
-  <link href="/pelican_blog/theme/css/screen.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" href="/pelican_blog/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/pelican_blog/favicon.ico" type="image/x-icon">
-  <link href="/pelican_blog/" type="application/atom+xml" rel="alternate" title="Hello ATOM Feed" />
+  <link href="/theme/css/screen.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link href="/" type="application/atom+xml" rel="alternate" title="Hello ATOM Feed" />
 </head>
 <body>
 <div id="outer-wrapper">
 <div id="header-wrapper">
-  <div class="logo"><a href="/pelican_blog">Hello</a></div>
+  <div class="logo"><a href="">Hello</a></div>
   <div class="small"></div>
     <div class="nav">
     </div>
@@ -25,7 +25,7 @@
 </div>    <div id="main">
     <h1>Authors on Hello</h1>
 
-    <ul>        <li><a href="/pelican_blog/author/liudonghua.html">liudonghua</a> (2)</li>
+    <ul>        <li><a href="/author/liudonghua.html">liudonghua</a> (2)</li>
     </ul>
     </div>
 </div>
@@ -33,7 +33,7 @@
 <ul class="footer">
 </ul><ul class="footer">
     <li class="footer">&copy;&nbsp;2014&nbsp;::</li>
-    <li class="footer"><a href="/pelican_blog">Hello </a>&nbsp;::</li>
+    <li class="footer"><a href="">Hello </a>&nbsp;::</li>
     <li class="footer">powered by <a href="https://github.com/getpelican">pelican</a>&nbsp;::</li>
     <li class="footer"><a href="http://creativecommons.org/licenses/by-nc/3.0/deed.ru">CC BY-NC</a></li>
 </ul>
